Exciting second check in with different text

--- a/templates/static/plugin-style.less
+++ b/templates/static/plugin-style.less
@@ -1,5 +1,5 @@
 /*
-//Example that should show highlighting through NodeBB
+//Example css that should show highlighting through out NodeBB
 
 h2 {
   border: 2px solid black !important;
